mdma/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdma-client
  namespace: mdma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdma-client
  template:
    metadata:
      labels:
        app: mdma-client
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: client
        image: ghcr.io/oss-slu/material-derailleur/client:sha-9b988be
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mdma-client
  namespace: mdma
spec:
  selector:
    app: mdma-client
  ports:
  - port: 3000
    targetPort: 3000
