mdma/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdma-server
  namespace: mdma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mdma-server
  template:
    metadata:
      labels:
        app: mdma-server
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: server
        image: ghcr.io/oss-slu/material-derailleur/server:sha-2992e74
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: mdma-server
  namespace: mdma
spec:
  selector:
    app: mdma-server
  ports:
  - port: 5050
    targetPort: 5000
