mdma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdma
  namespace: mdma
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /mdma
        pathType: Prefix
        backend:
          service:
            name: mdma-client
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mdma-api
  namespace: mdma
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /mdma-api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mdma-server
            port:
              number: 5050
